# advanced-debugging

./: .cproject  .project  CMakeLists.txt  README.md  advanced debugging.pptx  cpu0.SVDat  cpu1.SVDat  justfile  openocd logical architecture.drawio  partitions.csv  sdkconfig  sdkconfig.old
main/: .cproject  CMakeLists.txt  main.c
main/_1_logging/demo/: _1_logging.c  _2_memory_print.c  _3_log_vars.c  logging.h
main/_1_logging/exercise/: _1_logging_ex.c  _2_memory_print_ex.c  _3_log_vars_ex.c  logging_ex.h
main/_1_logging/exercise/solutions/: _1_logging_ex_solution.c  _2_memory_print_ex_solutions.c  _3_log_vars_ex_solution.c  solutions.h
main/_2_openocd_gdb/demo/: _2_gdb_core_dump.c  gdb_debug.c  gdb_debug.h  openocd_gdb.h  readme.md
main/_2_openocd_gdb/exercise/: _1_gdb_debug_ex.c  _2_gdb_core_dump_ex.c  open_ocd_gdb.h  openocd_gdb_ex.h
main/_2_openocd_gdb/exercise/solutions/: _1_gdb_debug_sol.c  _2_gdb_core_dump_sol.c
main/_3_memory/demo/: _1_memory_leaks.c  _2_memory_poisoning.c  _2_memory_trace.c  _3_memory_poisoning.c  memory.h
main/_3_memory/exercise/: _1_memory_leaks_ex.c  _2_memory_trace_ex.c  _3_memory_poisoning_ex.c  memory_ex.h
main/_3_memory/exercise/solutions/: _1_memory_leaks_sol.c  _2_memory_trace_sol.c  _3_memory_poisoning_sol.c
main/_4_trace/demo/: _1_app_trase.c  _2_segger_trace.c  _3_app_trase_and_segger.c  trace.h
main/_4_trace/exercise/: exercise.md
main/include/: advanced_debugging.h
